# gauge-rust

./: .gitignore  Cargo.toml  build.rs  rust.json
example/: .gitignore  Cargo.toml  manifest.json
example/env/default/: default.properties
example/specs/: fizzbuzz.spec
scripts/: e2e.sh  genproto.sh  install.sh
src/: common.rs  install.rs  main.rs  runner.rs  scanner.rs
src/proto/: api.rs  messages.rs  spec.rs
