[package]
name = "gauge_rs"
version = "0.0.1"
authors = [ "Kaustav Das Modak <kaustav.dasmodak@yahoo.co.in" ]
description = """
Rust language runner for Gauge test automation suite
"""
edition = "2018"



[dependencies]
#protobuf = "2.22.0"
rustc-serialize = "0.3.24"
lazy_static = "1.4.0"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"


[build-dependencies]
tonic-build = "0.4"